// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectItem Component renders correctly with a different item label 1`] = `
<div>
  <div
    class="text-white-mode1 font-inter cursor-pointer px-[10px] py-[5px] text-[12px] leading-normal font-normal whitespace-nowrap"
  >
    Spanish
  </div>
</div>
`;

exports[`SelectItem Component renders correctly with item label 1`] = `
<div>
  <div
    class="text-white-mode1 font-inter cursor-pointer px-[10px] py-[5px] text-[12px] leading-normal font-normal whitespace-nowrap"
  >
    English
  </div>
</div>
`;
